# Employee-Management-App

./: Frappe APIs.postman_collection.json  README.md  pyproject.toml
.github/workflows/: ci.yml
emp_app/: hooks.py  login_api.py  modules.txt  queries.py
emp_app/company/doctype/company/: company.js  company.json  company.py  test_company.py
emp_app/company/doctype/company/api/: company_api.py
emp_app/department/doctype/department/: department.js  department.json  department.py  test_department.py
emp_app/department/doctype/department/api/: api.py
emp_app/employee/doctype/employee_doctype/: employee_doctype.json  employee_doctype.py  test_employee_doctype.py
emp_app/employee/doctype/employee_doctype/api/: api.py  utils.py
emp_app/login_api/: login_api.py
